--- a/bluearchive.html
+++ b/bluearchive.html
@@ -51,72 +51,26 @@
     <!-- Section 1 -->
     <div class="art-section">
       <div class="art-header">
-        <h2>MapleStory M Trailers for NEXON</h2>
-        <p>Trailers for MapleStory's mobile version, MapleStory M. I was tasked with splicing together various cinematics, gameplay footage, sounds, and creating the motion graphics for the in-between and end slates. </p>
+        <h2>Blue Archive Social Videos for NEXON</h2>
+        <p>Social videos I have done for NEXON's gacha game, Blue Archive. I was tasked with splicing together various cinematics, gameplay footage, audio, designing the backgrounds, and creating the motion graphics. </p>
       </div>
 
       <div class="art-display"><br>
 
         
-    <div class="half-image loading-icon">
-      <img src="https://64.media.tumblr.com/4faedd7477ce3df495dfbbc436ff17b9/af9bd931bc4a5eb6-a1/s1280x1920/900682e2650ae6ff0cd7a1233d5b050ef4d9706c.gifv">
+    <div class="quarter-image loading-icon">
+      <img src="https://64.media.tumblr.com/5fd266d1bfc2f19d9c369871e6725567/d545466189d0a74e-dd/s400x600/6508a9311290f3e1f08fc12058435dea45a0cef9.gifv">
     </div>
-    <div class="half-image loading-icon">
-      <img src="https://64.media.tumblr.com/87d4d0cc3c1bd803c1189e0444fde74b/af9bd931bc4a5eb6-1f/s500x750/99aeaf0f9150884dcd9f54b7c1485d46546481d4.gifv">
+        <div class="quarter-image loading-icon">
+      <img src="https://64.media.tumblr.com/6bae843721eb316f5feb05c71a0ff98a/d545466189d0a74e-f0/s400x600/a20e62064c671efddda18efba0b6d1843f637b65.gifv">
     </div>
-
-        <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYWJiNGx3OGVlZmFldjg4aXAxdGFqZDBqajNlcnI0dHV3ZzU1MWIwMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/olpWXlwsvgYRhFUEE6/giphy-downsized-large.gif">
-        </div>
-        <div class="half-image loading-icon">
-          <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzBtdnhzdGdkYWdvc21waTNtYzE0ODFid3N4NndleWE4OTdiZGJ3OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/RGlGrJqarJyz90f2Gb/giphy-downsized-large.gif">
-        </div>
-      <div class="half-image loading-icon">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNzRnZzYwbTh5MHUyeW9kdWc0dXJxbmZqcnp1MWppb3p5M3psc2c0biZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/eezaOs7JgJses09nWg/giphy.gif">
-      </div>
-      <div class="half-image loading-icon">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNThkZGo0d2RsMG1vanZmZ2lidjIwdGo5dXdtcGNvdmR5aWJqeGIxNCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/wC9hconl7leZVpcnk6/giphy.gif">
-      </div>
-
-      <div class="half-image loading-icon">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaXZoa2l3ZDd5aGo3ZGpwd2JoNnNoY3BhaHhwN2oxcm95bnk1a2dvbSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/rq0RLzU5elNJuOqIfM/giphy.gif">
-      </div>
-      <div class="half-image loading-icon">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZ3k0ZDRpbWgwMnQ5a3I5OTl6NTRwdWo5bmR0NXBzMGpqaGR4ZGZvOSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/PDJFqrIELU52zUWcJa/giphy.gif">
-      </div>
-    <div class="half-image loading-icon">
-      <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcGpvZ3FzenV3dm82YXh3MGRycGs1ODhub2c4NXV6aDhtNncxbTg4NSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/4rVvGkvJNeEMfhwcP6/giphy.gif">
-    </div>
-    <div class="half-image loading-icon">
-      <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHZuMWV6aGIxZWUyN3BucTd3MXByNno5Y2Ywdm9qbnNlN2c1ZGQ4ciZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/bRNcGr9yZcw9CPwn7A/giphy.gif">
-    </div>
-    <div class="half-image loading-icon">
-      <img src="https://64.media.tumblr.com/a0ef55209076d57ad70469a680afcbe2/3639fee865b8cb1d-81/s540x810/ff5aa5624d41108d214926251449fec1b8affd65.gifv">
-    </div>
+        <div class="quarter-image loading-icon">
+      <img src="https://64.media.tumblr.com/2d45d92767ba61dea81c98010fc08158/d545466189d0a74e-26/s400x600/2cb07c2b96f23193eb0ed70453d33e1e5006f16f.gifv">
     </div>
 
 
-      <div class="full-image">
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/SaY-WbVtuas" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div> 
-        <br>
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/RAX105k7qtU" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>    
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/y9Ha3zGc74s" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div> 
-        <br>     
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/dmxrYAQscxw" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div> 
-        <br>        
-        <div class="embed-container">
-          <iframe src="https://www.youtube.com/embed/6nexmL7qcqQ" frameborder="0" allow="autoplay; encrypted-media" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-        </div>   
-      </div>
-    
+    </div>
+
 
 
       </div>
