--- a/bluearchive.html
+++ b/bluearchive.html
@@ -52,7 +52,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Blue Archive Social Videos for NEXON</h2>
-        <p>Social videos I have done for NEXON's gacha game, Blue Archive. I was tasked with splicing together various cinematics, gameplay footage, audio, designing the backgrounds, and creating the motion graphics. </p>
+        <p>Social videos I have done for NEXON's gacha game, <a href="https://www.instagram.com/en.bluearchive/">Blue Archive</a>. I was tasked with splicing together various cinematics, gameplay footage, audio, designing the backgrounds, and creating the motion graphics. </p>
       </div>
 
       <div class="art-display"><br>
@@ -66,6 +66,28 @@
     </div>
         <div class="quarter-image loading-icon">
       <img src="https://64.media.tumblr.com/2d45d92767ba61dea81c98010fc08158/d545466189d0a74e-26/s400x600/2cb07c2b96f23193eb0ed70453d33e1e5006f16f.gifv">
+    </div>
+
+
+        <div class="quarter-image loading-icon">
+      <img src="https://64.media.tumblr.com/de9b7280290d1b2314a7edd1610589f9/c5dc3c61d4cd96b1-8a/s400x600/90e628c78a1fdc6517cd6386002f8731562f41cc.gifv">
+    </div>
+        <div class="quarter-image loading-icon">
+      <img src="https://64.media.tumblr.com/08b57f150e5f6497a68bf4b2c8d910b1/c5dc3c61d4cd96b1-cd/s400x600/e2695f857cfdd82c082191ce8e2b368c245d738e.gifv">
+    </div>
+        <div class="quarter-image loading-icon">
+      <img src="https://64.media.tumblr.com/0c202dd18f3980028f3023c5d31d9515/c5dc3c61d4cd96b1-08/s400x600/b6a374a0c284979e5b20a8502b8f9f2451e7f029.gifv">
+    </div>
+
+
+            <div class="quarter-image loading-icon">
+      <img src="https://64.media.tumblr.com/c00ab7a2d8c9e5a86a5224983fd5d511/c5dc3c61d4cd96b1-ca/s400x600/d0f69b59785147dcbc9c8a66871ddf16e2374b1c.gifv">
+    </div>
+        <div class="quarter-image loading-icon">
+      <img src="https://64.media.tumblr.com/3c7844f61c8519600a263a006d6511b1/c5dc3c61d4cd96b1-8f/s400x600/4ddda54b877c589fce51521c779bca72f0ad72be.gifv">
+    </div>
+        <div class="quarter-image loading-icon">
+      <img src="https://64.media.tumblr.com/d30eeebc02af1b9241da5a8fd7388bdf/c5dc3c61d4cd96b1-b8/s400x600/474d84780ac50fdad139aaff45f5f2314d076bf5.gifv">
     </div>
 
 
