--- a/bluearchive.html
+++ b/bluearchive.html
@@ -70,7 +70,7 @@
 
 
         <div class="quarter-image loading-icon">
-      <img src="https://64.media.tumblr.com/de9b7280290d1b2314a7edd1610589f9/c5dc3c61d4cd96b1-8a/s400x600/90e628c78a1fdc6517cd6386002f8731562f41cc.gifv">
+      <img src="https://64.media.tumblr.com/de9b7280290d1b2314a7edd1610589f9/c5dc3c61d4cd96b1-8a/s400x600/90e628c78a1fdc6517cd6386002f8731562f41cc.gifv" a href="https://www.instagram.com/p/DPjJeahifiv/?hl=en">
     </div>
         <div class="quarter-image loading-icon">
       <img src="https://64.media.tumblr.com/08b57f150e5f6497a68bf4b2c8d910b1/c5dc3c61d4cd96b1-cd/s400x600/e2695f857cfdd82c082191ce8e2b368c245d738e.gifv">
