--- a/bluearchive.html
+++ b/bluearchive.html
@@ -71,24 +71,28 @@
 
         <div class="quarter-image loading-icon">
          <a href="https://www.instagram.com/p/DPjJeahifiv/?hl=en" target="_blank">
-      <img src="https://64.media.tumblr.com/de9b7280290d1b2314a7edd1610589f9/c5dc3c61d4cd96b1-8a/s400x600/90e628c78a1fdc6517cd6386002f8731562f41cc.gifv"> </a>
+      <img src="https://64.media.tumblr.com/de9b7280290d1b2314a7edd1610589f9/c5dc3c61d4cd96b1-8a/s400x600/90e628c78a1fdc6517cd6386002f8731562f41cc.gifv"> 
+    </a>
     </div>
-           <a href="https://www.instagram.com/p/DMMPGFAJLyH/?hl=en" target="_blank">
-        <div class="quarter-image loading-icon">
-      <img src="https://64.media.tumblr.com/08b57f150e5f6497a68bf4b2c8d910b1/c5dc3c61d4cd96b1-cd/s400x600/e2695f857cfdd82c082191ce8e2b368c245d738e.gifv"></a>
+         
+        <div class="quarter-image loading-icon">   <a href="https://www.instagram.com/p/DMMPGFAJLyH/?hl=en" target="_blank">
+      <img src="https://64.media.tumblr.com/08b57f150e5f6497a68bf4b2c8d910b1/c5dc3c61d4cd96b1-cd/s400x600/e2695f857cfdd82c082191ce8e2b368c245d738e.gifv">
+    </a>
     </div>
-         <a href="https://www.instagram.com/p/DOuXETBjjqT/?hl=en" target="_blank">
-        <div class="quarter-image loading-icon">
+       
+        <div class="quarter-image loading-icon">   <a href="https://www.instagram.com/p/DOuXETBjjqT/?hl=en" target="_blank">
       <img src="https://64.media.tumblr.com/0c202dd18f3980028f3023c5d31d9515/c5dc3c61d4cd96b1-08/s400x600/b6a374a0c284979e5b20a8502b8f9f2451e7f029.gifv">
     </div></a>
 
       <a href="https://www.instagram.com/p/DN63KPVAQx2/?hl=en" target="_blank">
             <div class="quarter-image loading-icon">
-      <img src="https://64.media.tumblr.com/c00ab7a2d8c9e5a86a5224983fd5d511/c5dc3c61d4cd96b1-ca/s400x600/d0f69b59785147dcbc9c8a66871ddf16e2374b1c.gifv"></a>
+      <img src="https://64.media.tumblr.com/c00ab7a2d8c9e5a86a5224983fd5d511/c5dc3c61d4cd96b1-ca/s400x600/d0f69b59785147dcbc9c8a66871ddf16e2374b1c.gifv">
+    </a>
     </div>
       <a href="https://www.instagram.com/p/DNJ4jIPNSDO/?hl=en" target="_blank">
         <div class="quarter-image loading-icon">
-      <img src="https://64.media.tumblr.com/3c7844f61c8519600a263a006d6511b1/c5dc3c61d4cd96b1-8f/s400x600/4ddda54b877c589fce51521c779bca72f0ad72be.gifv"></a>
+      <img src="https://64.media.tumblr.com/3c7844f61c8519600a263a006d6511b1/c5dc3c61d4cd96b1-8f/s400x600/4ddda54b877c589fce51521c779bca72f0ad72be.gifv">
+    </a>
     </div>
 
 
