--- a/bluearchive.html
+++ b/bluearchive.html
@@ -52,7 +52,7 @@
     <div class="art-section">
       <div class="art-header">
         <h2>Blue Archive Social Videos for NEXON</h2>
-        <p>Social videos I have done for NEXON's gacha game, <a href="https://www.instagram.com/en.bluearchive/">Blue Archive</a>. I was tasked with splicing together various cinematics, gameplay footage, audio, designing the backgrounds, and creating the motion graphics.<br> Click an image below to watch their respective video. </p>
+        <p>A few social videos I have done for NEXON's gacha game, <a href="https://www.instagram.com/en.bluearchive/">Blue Archive</a>. I was tasked with splicing together various cinematics, gameplay footage, audio, designing the backgrounds, and creating the motion graphics.<br> Click an image below to watch their respective video. </p>
       </div>
 
       <div class="art-display"><br>
